k8s/hurricane-ics.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: hurricane-ics-deployment
  name: hurricane-ics-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: hurricane-ics-deployment
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: hurricane-ics-deployment
    spec:
      containers:
        - image: ghcr.io/h1ghbre4k3r/hurricane-ics:sha-fdcc5f2e29d253a2be6b46b91171de1cf54d36bb
          imagePullPolicy: Always
          name: hurricane-ics-deployment
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources: {}
      restartPolicy: Always
      tolerations:
        - key: "nodetype"
          operator: "Equal"
          value: "storage"
          effect: "NoExecute"
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: hurricane-ics-service
  name: hurricane-ics-service
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    io.kompose.service: hurricane-ics-deployment
status:
  loadBalancer: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hurricane-ics-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hurricane.lome.dev`)
      kind: Rule
      services:
        - name: hurricane-ics-service
          port: 3000
  tls:
    certResolver: le
